category button cutoff bug fixed

--- a/css/base.css
+++ b/css/base.css
@@ -103,7 +103,9 @@ textarea {
 }
 
 .label-title {
-
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 190px;
 }
 
 .media-container {
